<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txtAddName2"
        android:layout_width="223dp"
        android:layout_height="53dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/txtAddDes2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAddNameTxt2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAddDes2"
        android:layout_width="254dp"
        android:layout_height="223dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="57dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDescription2"
        app:layout_constraintTop_toBottomOf="@+id/txtAddName2" />

    <EditText
        android:id="@+id/txtAddCost"
        android:layout_width="198dp"
        android:layout_height="59dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="148dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/txtAddNameTxt2"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/addName"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription2"
        app:layout_constraintEnd_toStartOf="@+id/txtAddName2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDescription2"
        android:layout_width="79dp"
        android:layout_height="58dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="6dp"
        android:gravity="center"
        android:text="@string/addDes"
        app:layout_constraintEnd_toStartOf="@+id/txtAddDes2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddNameTxt2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="156dp"
        android:gravity="center"
        android:text="@string/addCost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtAddCost"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/addItemBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/swWeapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/weapon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rarityGroup3" />

    <Switch
        android:id="@+id/swArmor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/armor"
        app:layout_constraintStart_toEndOf="@+id/swWeapon"
        app:layout_constraintTop_toBottomOf="@+id/rarityGroup3" />

    <Switch
        android:id="@+id/swConsumable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/consumable"
        app:layout_constraintStart_toEndOf="@+id/swArmor"
        app:layout_constraintTop_toBottomOf="@+id/rarityGroup3" />

    <Button
        android:id="@+id/btnCancel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/btnAddItem2" />

    <RadioGroup
        android:id="@+id/rarityGroup3"
        android:layout_width="368dp"
        android:layout_height="54dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddDes2">

        <RadioButton
            android:id="@+id/rbVeryRare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vRare" />

        <RadioButton
            android:id="@+id/rbLegendary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/legendary" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rarityGroup4"
        android:layout_width="363dp"
        android:layout_height="59dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rarityGroup3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbCommon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common" />

        <RadioButton
            android:id="@+id/rbUncommon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uncommon" />

        <RadioButton
            android:id="@+id/rbRare2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rare" />
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabtnAddPhoto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>