<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutApp" />

    <TextView
        android:id="@+id/aboutName"
        android:layout_width="335dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/aboutName"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutAppV"
        android:layout_width="335dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/aboutAppV"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutName" />

    <TextView
        android:id="@+id/aboutApp"
        android:layout_width="332dp"
        android:layout_height="185dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/aboutApp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppV" />

</androidx.constraintlayout.widget.ConstraintLayout>