<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnLegendary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFD700"
        android:text="@string/legendary"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <Button
        android:id="@+id/btnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:text="@string/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLegendary"
        app:layout_constraintVertical_bias="0.422" />

    <ImageButton
        android:id="@+id/imgBtnCommon"
        android:layout_width="176dp"
        android:layout_height="181dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/common_item" />

    <ImageButton
        android:id="@+id/imgBtnUnCommon"
        android:layout_width="201dp"
        android:layout_height="182dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/imgBtnCommon"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/uncommon_item" />

    <ImageButton
        android:id="@+id/imgBtnRare"
        android:layout_width="168dp"
        android:layout_height="202dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnCommon"
        tools:srcCompat="@drawable/rare_item" />

    <ImageButton
        android:id="@+id/imgBtnVeryRare"
        android:layout_width="178dp"
        android:layout_height="203dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/imgBtnRare"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnUnCommon"
        tools:srcCompat="@drawable/very_rare_item" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="121dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/common"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnCommon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:text="@string/uncommon"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnUnCommon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="138dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/rare"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnRare" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:text="@string/vRare"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnVeryRare" />
</androidx.constraintlayout.widget.ConstraintLayout>