<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/notReady">

    <ImageView
        android:id="@+id/mimicImage"
        android:layout_width="234dp"
        android:layout_height="192dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintBottom_toTopOf="@+id/excuse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monsterAttack"
        tools:srcCompat="@drawable/mimic" />

    <TextView
        android:id="@+id/monsterAttack"
        android:layout_width="248dp"
        android:layout_height="55dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="94dp"
        android:text="@string/monster"
        android:gravity="center"
        android:textColor="@color/mimicTeeth"
        app:layout_constraintBottom_toTopOf="@+id/mimicImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/excuse"
        android:layout_width="288dp"
        android:layout_height="57dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="43dp"
        android:text="@string/notReady"
        android:gravity="center"
        android:textColor="@color/mimicTeeth"
        app:layout_constraintBottom_toTopOf="@+id/btnMonsterMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mimicImage" />

    <Button
        android:id="@+id/btnMonsterMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="155dp"
        android:text="@string/btnMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/excuse" />
</androidx.constraintlayout.widget.ConstraintLayout>